--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -606,7 +606,6 @@ section {
 --------------------------------------------------------------*/
 .featured-services {
   padding: 20px 0;
-  align-items: center;
 }
 
 .featured-services .icon-box {
@@ -644,6 +643,11 @@ section {
 .featured-services .description {
   line-height: 24px;
   font-size: 14px;
+}
+
+#feat {
+  margin: auto;
+  align-items: center;
 }
 
 /*--------------------------------------------------------------
