--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -646,8 +646,8 @@ section {
 }
 
 #feat {
-  margin: auto;
-  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 /*--------------------------------------------------------------
