--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1137,6 +1137,10 @@ section {
   object-fit: cover;
 }
 
+.team .member:hover img {
+  transform: scale(1.1);
+}
+
 .team .member h4 {
   font-weight: 700;
   margin-bottom: 2px;
