--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1135,6 +1135,7 @@ section {
   border-radius: 50%;
   margin: 0 0 30px 0;
   object-fit: cover;
+  transition: transform 0.3s ease-in-out;
 }
 
 .team .member:hover img {
