--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1131,7 +1131,8 @@ section {
 }
 
 .team .member img {
-  max-width: 60%;
+  height: 100%;
+  width: 100%;
   border-radius: 50%;
   margin: 0 0 30px 0;
   object-fit: cover;
