--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1131,8 +1131,7 @@ section {
 }
 
 .team .member img {
-  height: 100%;
-  width: 100%;
+  max-width: 60%;
   border-radius: 50%;
   margin: 0 0 30px 0;
   object-fit: cover;
