--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1136,6 +1136,10 @@ section {
   margin: 0 0 30px 0;
 }
 
+.team .member:hover img {
+  transform: scale(1.1);
+}
+
 .team .member h4 {
   font-weight: 700;
   margin-bottom: 2px;
