--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1136,7 +1136,7 @@ section {
   margin: 0 0 30px 0;
 }
 
-.team .member:hover img {
+.team .member:hover img h4{
   transform: scale(1.1);
   transition: 0.5s ease-in-out;
 }
