--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1136,9 +1136,25 @@ section {
   margin: 0 0 30px 0;
 }
 
-.team .member:hover img h4{
+.team .member:hover img {
   transform: scale(1.1);
   transition: 0.5s ease-in-out;
+  animation: pulse 1s infinite; /* Use the pulse animation on hover */
+}
+
+/* Pulse Animation */
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
 .team .member h4 {
