--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1137,7 +1137,7 @@ section {
 }
 
 .team .member:hover img {
-  transform: scale(1.1);
+  /* transform: scale(1.1); */
   transition: 0.5s ease-in-out;
   animation: pulse 1s infinite; /* Use the pulse animation on hover */
 }
