--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1138,7 +1138,7 @@ section {
 
 .team .member:hover img {
   /* transform: scale(1.1); */
-  /* transition: 1s ease-in-out; */
+  transition: 2s ease-in-out;
   animation: pulse 2s infinite; /* Use the pulse animation on hover */
 }
 
