--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,7 +408,7 @@ h6 {
 
 #hero .carousel-item::before {
   content: "";
-  /* background-color: rgba(45, 103, 60, 0.8); */
+  background-color: rgba(45, 103, 60, 0.5);
 }
 
 #hero .carousel-container {
