--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -676,7 +676,7 @@ section {
 # Why Us
 --------------------------------------------------------------*/
 .why-us {
-  padding: 20px;
+  padding: 20px 0;
 }
 
 .why-us .row {
