--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -779,7 +779,7 @@ section {
 }
 
 .services .iconbox-orange i {
-  color: #ffa76e;
+  color: #008000;
 }
 
 .services .iconbox-orange:hover .icon i {
@@ -787,11 +787,11 @@ section {
 }
 
 .services .iconbox-orange:hover .icon path {
-  fill: #ffa76e;
+  fill: #008000;
 }
 
 .services .iconbox-pink i {
-  color: #e80368;
+  color: #8B4513;
 }
 
 .services .iconbox-pink:hover .icon i {
@@ -799,7 +799,7 @@ section {
 }
 
 .services .iconbox-pink:hover .icon path {
-  fill: #e80368;
+  fill: #8B4513;
 }
 
 .services .iconbox-yellow i {
